# fambudget

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/fambudget/: __init__.py  cli.py  models.py  report.py  simulator.py
src/fambudget/budget/: __init__.py  analyzer.py  planner.py  tracker.py
src/fambudget/optimizer/: __init__.py  debt.py  emergency.py  savings.py
tests/: test_analyzer.py  test_benchmark.py  test_core.py  test_debt.py  test_emergency.py  test_integration.py  test_models.py  test_planner.py  test_savings.py  test_simulator.py  test_tracker.py
